@@ -101,6 +101,7 @@ public:
 	void updateLayerColorMenuIcon();
 
 	void selectLayer(int id);
+	void clearLayerSelection();
 	void selectAbove();
 	void selectBelow();
 
